terraform/modules/buyer/manifests/app/istio-manifest/app-gateways/buyer-app/buyer-app-vs.yaml
# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: buyer-app-vs
  namespace: buyer-app
spec:
  hosts: ${allow_hosts}
  gateways:
    - buyer-app-gateway
  http:
    - match:
        - uri:
            prefix: "/buyer/app"
        - uri:
            prefix: "/buyer/app/"
        - uri:
            prefix: "/app"
        - uri:
            prefix: "/app/"
      rewrite:
        uri: " "
      route:
        - destination:
            port:
              number: 8080
            host: buyer-app-service
